# branch_prediction

./: CMakeLists.txt  benchmark_tao.cpp  benchmark_tao.h  cppref_example.cpp  cppref_example.h  if_counter.cpp  if_counter.h  lint.cpp  lint.h  main.cpp  pch.h
tao/json/: basic_value.hpp  operators.hpp  parts_parser.hpp  pointer.hpp  self_contained.hpp  stream.hpp  traits.hpp  utf8.hpp
tao/json/binding/: constant.hpp  factory.hpp  versions.hpp
tao/json/cbor/: parts_parser.hpp
tao/json/contrib/: diff.hpp  get.hpp  patch.hpp  pointer_traits.hpp  reference.hpp  schema.hpp  shared_ptr_traits.hpp  unique_ptr_traits.hpp  vector_traits.hpp
tao/json/events/: compare.hpp  debug.hpp  hash.hpp  invalid_string_to_binary.hpp  invalid_string_to_exception.hpp  invalid_string_to_hex.hpp  key_camel_case_to_snake_case.hpp  key_snake_case_to_camel_case.hpp  limit_nesting_depth.hpp  limit_value_count.hpp  non_finite_to_exception.hpp  non_finite_to_null.hpp  non_finite_to_string.hpp  prefer_signed.hpp  prefer_unsigned.hpp  to_pretty_stream.hpp  to_stream.hpp  validate_event_order.hpp  validate_keys.hpp
tao/json/internal/: action.hpp  base64.hpp  base64url.hpp  escape.hpp  grammar.hpp  number_state.hpp  parse_util.hpp  sha256.hpp  uri_fragment.hpp
tao/json/jaxn/: is_identifier.hpp  parts_parser.hpp
tao/json/msgpack/: parts_parser.hpp
tao/json/ubjson/: parts_parser.hpp
tao/pegtl/: buffer_input.hpp  config.hpp  discard_input_on_failure.hpp  discard_input_on_success.hpp  match.hpp
tao/pegtl/contrib/: analyze.hpp  check_bytes.hpp  coverage.hpp  http.hpp  integer.hpp  print.hpp  (+10 more)
(+48 files in other folders)
